--- a/NewDesign/index.html
+++ b/NewDesign/index.html
@@ -1,63 +1,305 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="./invoice/style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="header">
-        <table class="w-100">
-            <tr>
-                <td><img src="./invoice/image/logo.png" width="270"></td>
-                <td><h2>Medora Travel Services</h2>
-                <p>167, Sunrise Park, Opp. Drive-in Cinema, Thaltej Road, Bodakdev | Email: carrentals@medoraindia.com |
-                    Phone: +91 9426633859</p>
-                </td>
-            </tr>
-           
-            <tr>
-                <td class="border border-2 font-bold"  style="text-align:center; border-left: 0 !important; border-right: 0 !important;" colspan="3">
-                    TAX INVOICE
-                </td>
-            </tr>
-        </table>
-    </div>
-    <div class="main-content">
-        <table class="table table-bordered mt-3">
-            <tr>
-              <td  class="font-bold">Autoriders International Ltd</td>
-              <td>*Original for recipient</td>
-            </tr>
-            <tr>
-                <td>4A, Vikas Center, S.V.Road, Santaruz (W).Mumbai - 400054</td>
-                <td>Invoice Number: 202223-000585
-                </td>
-              </tr>
-              <tr>
-                <td><span class="font-bold">State of supply:</span> 27-Maharashtra</td>
-                <td>Invoice Date: 11-06-2022</td>
-              </tr>
-              <tr>
-                <td><span class="font-bold">Phone:</span> 9619881159</td>
-                <td>Contact</td>
-              </tr>
-              <tr>
-                <td><span class="font-bold">PAN:</span> 9619881159</td>
-                <td>Contact</td>
-              </tr>
-              <tr>
-                <td><span class="font-bold">GSTIN:</span> 27AAACA4897J1ZA</td>
-                <td>Contact</td>
-              </tr>
-          </table>
-   
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="./invoice/style.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="header">
+    <table class="w-100">
+      <tr>
+        <td><img src="./invoice/image/logo.png" width="270"></td>
+        <td>
+          <h2>Autoriders International</h2>
+          <p>4A, Vikas Centre, Sv Road, Santacruz (West), Mumbai, Maharashtra 400054 || Phone: 011 4545 0000</p>
+        </td>
+      </tr>
+
+      <tr class="table-border-dark">
+        <td class="border border-2 font-bold"
+          style="text-align:center; border-left: 0 !important; border-right: 0 !important;" colspan="3">
+          TAX INVOICE
+        </td>
+      </tr>
+    </table>
+  </div>
+  <div class="main-content">
+    <table class="w-100 mt-3">
+      <tr>
+        <td class="font-bold">Autoriders International Ltd</td>
+        <td>*Original for recipient</td>
+      </tr>
+      <tr>
+        <td>4A, Vikas Center, S.V.Road, Santaruz (W).Mumbai - 400054</td>
+        <td>Invoice Number: 202223-000585
+        </td>
+      </tr>
+      <tr>
+        <td><span class="font-bold">State of supply:</span> 27-Maharashtra</td>
+        <td>Invoice Date: 11-06-2022</td>
+      </tr>
+      <tr>
+        <td><span class="font-bold">Phone:</span> 9619881159</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td><span class="font-bold">PAN:</span> 9619881159</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td><span class="font-bold">GSTIN:</span> 27AAACA4897J1ZA</td>
+        <td></td>
+      </tr>
+    </table>
+
+
+    <table class="w-100 mt-3 table-bordered">
+      <thead>
+        <tr>
+          <th>Sr.</th>
+          <th>Price</th>
+          <th>Qty</th>
+          <th>Total Price</th>
+          <th>S.Date</th>
+          <th>E.Date</th>
+          <th>S.Time</th>
+          <th>E.Time</th>
+          <th>T.Time</th>
+          <th>Ex.Time</th>
+          <th>S.Km</th>
+          <th>E.Km</th>
+          <th>T.Km</th>
+          <th>Ex.Km</th>
+          <th>Ex.Hr. Rate</th>
+          <th>Ex.Km. Rate</th>
+          <th>Ex.Hr. Cost</th>
+          <th>Ex.Km. Cost</th>
+          <th>Out.Day</th>
+          <th>Out.Night</th>
+          <th>Late</th>
+          <th>Sub.Total (incl. Allowances)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td rowspan="2">1</td>
+          <td>1000</td>
+          <td>1</td>
+          <td>1000</td>
+          <td>11-06-2022</td>
+          <td>11-06-2022</td>
+          <td>11:00</td>
+          <td>12:00</td>
+          <td>1</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>1000</td>
+          <td>1000</td>
+        </tr>
+        <tr>
+          <td>1000</td>
+          <td>1</td>
+          <td>1000</td>
+          <td>11-06-2022</td>
+          <td>11-06-2022</td>
+          <td>11:00</td>
+          <td>12:00</td>
+          <td>1</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>1000</td>
+          <td>1000</td>
+        </tr>
+        <tr>
+          <td rowspan="2">2</td>
+          <td>1000</td>
+          <td>1</td>
+          <td>1000</td>
+          <td>11-06-2022</td>
+          <td>11-06-2022</td>
+          <td>11:00</td>
+          <td>12:00</td>
+          <td>1</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>1000</td>
+          <td>1000</td>
+        </tr>
+        <tr>
+          <td>1000</td>
+          <td>1</td>
+          <td>1000</td>
+          <td>11-06-2022</td>
+          <td>11-06-2022</td>
+          <td>11:00</td>
+          <td>12:00</td>
+          <td>1</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>1000</td>
+          <td>1000</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td></td>
+          <td colspan="7" class="font-bold">Total</td>
+          <td>13:30</td>
+          <td colspan="3"></td>
+          <td>161</td>
+          <td colspan="5"></td>
+          <td>0.00</td>
+          <td>0.00</td>
+          <td>0.00</td>
+          <td>7,600.00</td>
+        </tr>
+      </tfoot>
+    </table>
+
+
+    <table class="w-100 mt-4  items">
+      <thead class="table-bordered table-border-dark">
+        <tr>
+          <th>SR.</th>
+          <th>DESCRIPTION</th>
+          <th>RATE</th>
+          <th>QTY</th>
+          <th>AMOUNT</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>#42053096 <span class="font-bold">Booked by:</span> Mr Ronak | <span class="font-bold">From</span> 07-06-2022 to 08-06-2022<br>
+            <span class="font-bold">Vehicle Group:</span> Crysta 6 Seater Bucket | GJ05AV5552 <br>
+            <span class="font-bold">Duty Type:</span> Local Up To 12Hrs/100Kms (Surat) <br>
+            <span class="font-bold">Passengers:</span> Mr Sardar Imran Khan</td>
+          <td>3,800.00</td>
+          <td>2</td>
+          <td>7,600.00</td>
+        </tr>
+        <tr class="table-border-light">
+          <td>2</td>
+          <td>Charges</td>
+          <td>0.00</td>
+          <td>1</td>
+          <td>0.00</td>
+        </tr>
+      </tbody>
+      <tfoot class="table-bordered table-border-dark">
+        <tr>
+          <td colspan="3" class="font-bold text-end">Taxable Sub Total </td>
+          <td></td>
+          <td>7,600.00</td>
+        </tr>
+        <tr>
+          <td colspan="2"><span class="font-bold">In words:</span> Seven Thousand Six Hundred Rupees Only </td>
+          <td class="font-bold text-end">TOTAL</td>
+          <td></td>
+          <td class="font-bold">7,600.00</td>
+        </tr>
+      </tfoot>
+    </table>
+
+
+    <div class="payment-tax-details container-fluid mt-3">
+   <table>
+    <tr>
+      <td style="width: 700px;">
+        Taxes: IGST 5% - 5%: ₹ 380.00
+        <ul style="padding: 0;list-style: none;" class="append-hash">
+          <li>Subject to Ahmedabad jurisdiction.</li>
+          <li>Without original invoice no refund is permissible.</li>
+          <li>Interest @ 24% will be charged on delayed payment.</li>
+          <li>Cheque to be drawn in favour of "Medora Travel Services".</li>
+          <li>Kindly check all details carefully to avoid un-necessary complications.</li>
+          <li>If payment will be not made by Company/ Sponsor than responsibility to make payment to the user/guest.</li>
+          <li>Invoice once received will be amended only within five days of receiving the invoice. Any changes after that will not be entertained.</li>
+          <li>Notification No. 22-2019 dated 30th September 2019. Serial No 15. It will be the responsibility of the Body corporate to pay GST from 1st October 2019.</li>
+          <li>PAN No ACSPM2354B</li>
+          <li>Proprietorship Firm, Proprietor Name: Mr Oorvaksh R Medora</li>
+          <li>MSME UAN Reg. No. GJ01E0014224</li>
+          <li>Type of Enterprise: Small Services</li>
+          <li>UDYAM Reg. No. UDYAM-GJ-01-0056180</li>
+          <li>Type of Enterprise: Small Services</li>
+          <li>From 1st March 2020, we shall be sending only soft copy invoice via email. In case anyone requires a hard copy they will have to request for the same.</li>
+          <li>Google Payment Mobile No +91 94266 33859, After making payment please send the payment details on accounts@autoriders.in</li>
+        </ul>
+        <p>GSTIN: 24ACSPM2354B2ZR | SAC/HSN/Accounting code: 9966 | PAN: ACSPM2354B</p>
+        <h6>Bank Details:</h6>
+        <ul class="bank_details">
+          <li>Account No.: 08252000002262</li>
+          <li>Bank: Kotak Mahindra Bank (Ahmedabad - Drive In Road Branch) | IFSC: KKBK0000825</li>
+          <li>Please issue cheques in name of "Medora Travel Services".</li>
+          <li>Pay using UPI at medora@kotak</li>
+        </ul>
+
+      </td>
+      <td class="autorider-stamp" >
+        For Autoriders  International Ltd<br>
+        <img src="./invoice/image/logo.png" width="200"><br>
+        Authorized signatory
+      </td>
+    </tr>
+   </table>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-       
-    </script>
+
+    <div class="duty_slip">
+      <div class="card">
+        <h5 class="card-header rounded-0">Duty #42053096-1</h5>
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+
+  </script>
 </body>
+
 </html>
